# rustam

./: Cargo.toml  README.md
adder/: Cargo.toml
adder/benches/: my_benchmark.rs
adder/src/: lib.rs
adder/tests/: integration_test.rs
advance/: Cargo.toml
advance/hello_macro/hello_macro_derive/: Cargo.toml
advance/hello_macro/hello_macro_derive/src/: lib.rs
advance/src/: lib.rs  main.rs
ass/: Cargo.toml
ass/src/: lib.rs  main.rs  types.rs
backend/: .env  Cargo.toml  README.md
backend/migrations/: 20260430062511_create_task_table.sql
backend/src/: error.rs  main.rs  storage.rs
backend_2/: Cargo.toml  build.rs
backend_2/src/: main.rs
carger/: Cargo.toml
carger/add_one/src/: lib.rs
carger/adder/: Cargo.toml
carger/adder/src/: main.rs
carger/src/: lib.rs  main.rs
chat/: Cargo.toml
chat/chat_cli/: Cargo.toml
chat/chat_client/: Cargo.toml
chat/chat_server/: Cargo.toml
chat/stp/: Cargo.toml
closures/src/: lib.rs  main.rs
concurrency/src/: lib.rs  main.rs
homework_2/: .gitignore  Cargo.toml  design.md  inspectation_report.md  inspection_task.md  new_task.md  package-lock.json  patterns_explained.md  report.md  reqs.md  task.md  thermometer_sim.toml  todo.md
homework_2/examples/: builder_example.rs  compositor_example.rs  observer_example.rs  smart_home.rs
homework_2/ffi/: Cargo.toml  use_lib.py
homework_2/ffi/synt_ex_lib/: Cargo.toml
homework_2/ffi/synt_ex_lib/src/: lib.rs
homework_2/ffi/use_cjson/: Cargo.toml  build.rs
homework_2/ffi/use_cjson/src/: lib.rs  main.rs
homework_2/ffi/use_cjson_rust_lib/: Cargo.toml
homework_2/ffi/use_cjson_rust_lib/src/: main.rs
homework_2/ffi/use_dyn_on_start/: Cargo.toml  build.rs
homework_2/ffi/use_dyn_on_start/src/: main.rs
homework_2/ffi/use_dyn_runtime/: Cargo.toml
homework_2/ffi/use_dyn_runtime/src/: main.rs
homework_2/ffi/use_rust_lib/: Cargo.toml  build.rs
homework_2/ffi/use_rust_lib/src/: main.rs
homework_2/src/: compositor.rs  error.rs  home.rs  lib.rs
homework_2/src/socket/: mod.rs  protocol.rs
homework_2/src/thermometer/: mod.rs  packet.rs
homework_2/utils/: Cargo.toml  README.md  perf.data  perf.data.old
homework_2/utils/benches/: my_bench.rs
homework_2/utils/examples/: anyhow_.rs  bitflags_.rs  bitvec_.rs  bytemuck_.rs  clap_.rs  crossbeam_.rs  debugging_.rs  glam_.rs  logging_.rs  nalgebra_.rs  nom_.rs  profiling_.rs  rayon_.rs  serde_.rs  smallvec_.rs  tracing_.rs
homework_2/utils/src/: lib.rs
homework_2/utils/src/logging_/: mod.rs
homework_2/utils/src/profiling_/: mod.rs
homework_2/utils/src/tracing_/: mod.rs
leet/src/: lib.rs
minigrep/: output.txt
minigrep/src/: lib.rs  main.rs
oop/src/: lib.rs  main.rs
otus_2/: Cargo.toml  index.html
otus_2/examples/: how_to_use.rs
otus_2/src/: dices.rs  lib.rs
otus_2/tests/: some_tests.rs
patterns/src/: base.rs  lib.rs  main.rs  refutability.rs
pointers/: Cargo.toml
pointers/src/: lib.rs  main.rs
poli/: Cargo.toml
poli/counter/: Cargo.toml
poli/from_primitive/: Cargo.toml
poli/src/: decl_macr.rs  figures.rs  lib.rs  macr.rs  main.rs  nodes.rs  plug.rs  proc_macr.rs  sandbox.rs  sorter.rs
practice_1/: Cargo.toml
practice_1/examples/: actors.rs  assync.rs  atomics.rs  barrier.rs  builders.rs  drop_guard.rs  errs.rs  newtypes.rs  panic_hooks.rs  phantom_data.rs  send_sync.rs  threading.rs  tightness.rs  unsafe_.rs  weak_strong.rs
practice_1/src/: calc.rs  closures.rs  conversions.rs  errors.rs  fn_traits.rs  from_into.rs  lib.rs  main.rs  mutexes_.rs  use_calc.rs
practice_2/: Cargo.toml  README.md  t.txt
practice_2/src/: color_parse.rs  draws.rs  eu.rs  lib.rs
restaurant/src/: lib.rs
rustlings_exercises/04_primitive_types/: primitive_types5.rs
rustlings_exercises/05_vecs/: vecs1.rs  vecs2.rs
rustlings_exercises/09_strings/: strings3.rs
rustlings_exercises/11_hashmaps/: hashmaps1.rs  hashmaps3.rs
rustlings_exercises/12_options/: options1.rs  options2.rs  options3.rs
rustlings_exercises/13_error_handling/: errors2.rs  errors4.rs
rustlings_exercises/14_generics/: generics2.rs
server/: Cargo.toml  sosal.html
server/src/: lib.rs  main.rs
smart_house/: Cargo.toml
src/: auth.rs  enuming.rs  guessing_game.rs  lib.rs  main.rs  rectangle.rs
(+62 files in other folders)
