[package]
name = "backend_2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
tonic = { version = "0.14.5", features = ["tls-ring"] }
prost = "0.14.3"
tonic-prost = "0.14.5"
serde_json = "1.0.149"
rand = "0.10.1"
tokio-stream = "0.1.18"
async-stream = "0.3.6"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14.5"

[[bin]]
name = "server"
path = "src/server.rs"
# required-features = ["routeguide"]

[[bin]]
name = "client"
path = "src/client.rs"
# required-features = ["routeguide"]
