[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bitflags = "2.11.1"
bitvec = "1.0.1"
bytemuck = "1.25.0"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam = "0.8.4"
glam = "0.32.1"
nalgebra = "0.34.2"
nom = "8.0.0"
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = "1.15.1"

[profile.dev]
debug = true
opt-level = 0
