[package]
name = "hello_macro_derive"
version = "0.1.0"
edition = "2024"

[lib]
# INFO: these types of crates are proc-macro crates:
# - cannot be used like normal libraries
# - cannot export normal functions/types for runtime use
#
# INFO: so that that crate generates implementations (compile-time world)
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
